--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "goit-react-hw-02-phonebook-main",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vladislav-borovikov.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -15,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +39,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.2.1",
+    "prettier": "^2.5.1",
+    "prop-types": "^15.8.1"
+  },
+  "lint-staged": {
+    "*.js,jsx": "eslint --cache --fix",
+    "*.{js,jsx,css,md}": "prettier --write"
   }
 }
